--- a/404.html
+++ b/404.html
@@ -60,6 +60,7 @@
   <h1>Feeling Bored? Here's Something to Do!</h1>
   <p id="activity">Click below to find an activity!</p>
   <button onclick="fetchActivity()">Get Activity</button>
+  <h6>API - http://panel2.mcboss.top:25569/bored</h6>
 
   <script>
     async function fetchActivity() {
